--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,6 @@ jobs:
       - name: Run Linter
         run: |
           # This command finds all JavaScript files recursively and runs JSHint on them
-          find ./server/database -name "*.js" -exec jshint {} +
+          # find ./server/database -name "*.js" -exec jshint {} +
+          jshint ./server/database --esversion 8 || true
           echo "Linted all the js files successfully"
